rename to idiot12

--- a/boards/shields/idiot12/idiot12.dtsi
+++ b/boards/shields/idiot12/idiot12.dtsi
@@ -1,5 +1,5 @@
 #include <dt-bindings/zmk/matrix_transform.h>
-#include "idiot12_wireless-layouts.dtsi"
+#include "idiot12-layouts.dtsi"
 
 / {
     kscan0: kscan0 {
